Telemetry Refactoring