@@ -26,9 +26,12 @@ import javafx.scene.shape.Line;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Переиспользуемый компонент: AreaChart телеметрии + панель фильтра по периоду.
@@ -40,35 +43,23 @@ public class TelemetryChartPanel extends VBox {
 
     private static final DateTimeFormatter AXIS_FMT = DateTimeFormatter.ofPattern("dd.MM HH:mm");
 
-    // Периоды фильтрации (секунды)
-    private static final long PERIOD_1H  = 3600;
-    private static final long PERIOD_6H  = 6L * 3600;
+    private static final long PERIOD_1H = 3600;
+    private static final long PERIOD_6H = 6L * 3600;
     private static final long PERIOD_12H = 12L * 3600;
     private static final long PERIOD_24H = 24L * 3600;
     private static final long PERIOD_48H = 48L * 3600;
-    private static final long PERIOD_1W  = 7L * 86400;
-    private static final long PERIOD_MAX = 0; // без ограничений
+    private static final long PERIOD_1W = 7L * 86400;
+    private static final long PERIOD_MAX = 0;
 
-    /** Максимальное количество точек на графике для плавного отображения */
-    private static final int MAX_CHART_POINTS = 60;
-
-    /** Период-заглушка для пустого режима, когда пользователь выбрал "Всё" */
-    private static final long EMPTY_PERIOD_FALLBACK = PERIOD_24H;
-
-    /** Диапазон LiPo аккумулятора для нормализации напряжения в % (0–100) */
-    private static final float VOLTAGE_MIN = 3.0f;
-    private static final float VOLTAGE_MAX = 4.2f;
-
-    private static final String TITLE_BASIC = "Базовые метрики";
-    private static final String TITLE_RX = "Статистика эфира";
-    private static final String TITLE_RATE = "Скорость приема";
-    private static final String TITLE_TX = "Скорость передачи";
-    private static final String TITLE_QUALITY = "Качество соединения";
-    private static final String TITLE_HOPS = "Прыжки";
-    private static final String SERIES_BATTERY = "Battery %";
-    private static final String SERIES_VOLTAGE = "Voltage В";
-    private static final String SERIES_CH_UTIL = "ChUtil %";
-    private static final String SERIES_AIR_UTIL = "AirUtil %";
+    private static final List<PeriodOption> PERIOD_OPTIONS = List.of(
+            new PeriodOption("1ч", PERIOD_1H),
+            new PeriodOption("6ч", PERIOD_6H),
+            new PeriodOption("12ч", PERIOD_12H),
+            new PeriodOption("24ч", PERIOD_24H),
+            new PeriodOption("48ч", PERIOD_48H),
+            new PeriodOption("1нед", PERIOD_1W),
+            new PeriodOption("Всё", PERIOD_MAX)
+    );
 
     private final boolean basicOnly;
     private final AreaChart<Number, Number> chart;
@@ -77,20 +68,32 @@ public class TelemetryChartPanel extends VBox {
     private final AreaChart<Number, Number> txChart;
     private final AreaChart<Number, Number> qualityChart;
     private final AreaChart<Number, Number> hopsChart;
-    private ToggleGroup periodGroup;
-    private long selectedPeriodSeconds = PERIOD_6H;
+    private final List<ChartBinding> chartBindings;
+    private final ToggleGroup periodGroup = new ToggleGroup();
 
-    private DeviceState state;
-    private String nodeId;
+    private long selectedPeriodSeconds = PERIOD_6H;
+    private BindingState bindingState = Unbound.INSTANCE;
     private final Runnable telemetryListener = () -> Platform.runLater(this::refresh);
 
     /** Callback, вызываемый после обновления данных (для синхронизации таблицы логов) */
-    private Runnable onDataRefreshed;
+    private Runnable onDataRefreshed = () -> {};
 
     /** Последние отфильтрованные записи (для использования в таблице логов) */
-    private List<TelemetryEntry> filteredEntries = Collections.emptyList();
+    private List<TelemetryEntry> filteredEntries = List.of();
 
-    private record AxisRange(long lowerBound, long upperBound, long tickUnit) {}
+    private record PeriodOption(String label, long seconds) {}
+
+    private record ChartBinding(TelemetryChartDataBuilder.ChartKind kind, AreaChart<Number, Number> chart) {}
+
+    private record InteractiveNodes(Region plotArea, Node chartContent) {}
+
+    private sealed interface BindingState permits Bound, Unbound {}
+
+    private record Bound(DeviceState state, String nodeId) implements BindingState {}
+
+    private enum Unbound implements BindingState {
+        INSTANCE
+    }
 
     public TelemetryChartPanel() {
         this(false);
@@ -100,91 +103,33 @@ public class TelemetryChartPanel extends VBox {
         this.basicOnly = basicOnly;
         setSpacing(6);
 
-        // --- Графики ---
-        chart = createChart();
-        chart.setPrefHeight(200);
-        chart.setMinHeight(120);
+        chart = createSizedChart(false);
+        rxChart = createStyledChart(false, "/css/chart-green-red-yellow.css");
+        rateChart = createStyledChart(true, "/css/chart-green-red-yellow.css");
+        txChart = createStyledChart(true, "/css/chart-tx.css");
+        qualityChart = createStyledChart(true, "/css/chart-quality.css");
+        hopsChart = createStyledChart(true, "/css/chart-hops.css");
+        chartBindings = basicOnly
+                ? List.of(new ChartBinding(TelemetryChartDataBuilder.ChartKind.BASIC, chart))
+                : List.of(
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.BASIC, chart),
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.RX, rxChart),
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.RATE, rateChart),
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.TX, txChart),
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.QUALITY, qualityChart),
+                new ChartBinding(TelemetryChartDataBuilder.ChartKind.HOPS, hopsChart)
+        );
 
-        if (basicOnly) {
-            rxChart = null;
-            rateChart = null;
-            txChart = null;
-            qualityChart = null;
-            hopsChart = null;
-
-            StackPane chartWrap = wrapWithOverlay(chart);
-            VBox.setVgrow(chartWrap, Priority.ALWAYS);
-
-            HBox periodBar = createPeriodBar();
-            getChildren().addAll(chartWrap, periodBar);
-        } else {
-            String gryCSS = getClass().getResource("/css/chart-green-red-yellow.css").toExternalForm();
-            String txCSS = getClass().getResource("/css/chart-tx.css").toExternalForm();
-
-            rxChart = createChart();
-            rxChart.setPrefHeight(200);
-            rxChart.setMinHeight(120);
-            rxChart.getStylesheets().add(gryCSS);
-
-            rateChart = createAutoRangeChart();
-            rateChart.setPrefHeight(200);
-            rateChart.setMinHeight(120);
-            rateChart.getStylesheets().add(gryCSS);
-
-            txChart = createAutoRangeChart();
-            txChart.setPrefHeight(200);
-            txChart.setMinHeight(120);
-            txChart.getStylesheets().add(txCSS);
-
-            String qualityCSS = getClass().getResource("/css/chart-quality.css").toExternalForm();
-            qualityChart = createAutoRangeChart();
-            qualityChart.setPrefHeight(200);
-            qualityChart.setMinHeight(120);
-            qualityChart.getStylesheets().add(qualityCSS);
-
-            String hopsCSS = getClass().getResource("/css/chart-hops.css").toExternalForm();
-            hopsChart = createAutoRangeChart();
-            hopsChart.setPrefHeight(200);
-            hopsChart.setMinHeight(120);
-            hopsChart.getStylesheets().add(hopsCSS);
-
-            StackPane chartWrap = wrapWithOverlay(chart);
-            HBox.setHgrow(chartWrap, Priority.ALWAYS);
-            StackPane rxWrap = wrapWithOverlay(rxChart);
-            HBox.setHgrow(rxWrap, Priority.ALWAYS);
-            StackPane rateWrap = wrapWithOverlay(rateChart);
-            HBox.setHgrow(rateWrap, Priority.ALWAYS);
-            StackPane txWrap = wrapWithOverlay(txChart);
-            HBox.setHgrow(txWrap, Priority.ALWAYS);
-            StackPane qualityWrap = wrapWithOverlay(qualityChart);
-            HBox.setHgrow(qualityWrap, Priority.ALWAYS);
-            StackPane hopsWrap = wrapWithOverlay(hopsChart);
-            HBox.setHgrow(hopsWrap, Priority.ALWAYS);
-
-            HBox topRow = new HBox(6, chartWrap, rxWrap);
-            VBox.setVgrow(topRow, Priority.ALWAYS);
-
-            HBox middleRow = new HBox(6, rateWrap, txWrap);
-            VBox.setVgrow(middleRow, Priority.ALWAYS);
-
-            HBox bottomRow = new HBox(6, qualityWrap, hopsWrap);
-            VBox.setVgrow(bottomRow, Priority.ALWAYS);
-
-            HBox periodBar = createPeriodBar();
-            getChildren().addAll(topRow, middleRow, bottomRow, periodBar);
-        }
-
-        updateChart(Collections.emptyList(), Collections.emptyList());
+        getChildren().addAll(Stream.concat(createContent().stream(), Stream.of(createPeriodBar())).toList());
+        updateChart(List.of(), List.of());
     }
-
-    // ==================== Публичный API ====================
 
     /**
      * Устанавливает callback, вызываемый после каждого обновления данных графика.
      * Используется FormDashboard для синхронизации таблицы логов.
      */
     public void setOnDataRefreshed(Runnable callback) {
-        this.onDataRefreshed = callback;
+        onDataRefreshed = Objects.requireNonNullElse(callback, () -> {});
     }
 
     /**
@@ -193,19 +138,19 @@ public class TelemetryChartPanel extends VBox {
      * Если уже привязан к тому же state и nodeId — просто обновляет данные без переподписки.
      */
     public void bind(DeviceState state, String nodeId) {
-        if (this.state == state && Objects.equals(this.nodeId, nodeId)) {
-            // Уже привязан к тем же данным — просто обновить
+        Bound nextBinding = new Bound(
+                Objects.requireNonNull(state, "state"),
+                Objects.requireNonNull(nodeId, "nodeId")
+        );
+
+        if (currentBinding().filter(nextBinding::equals).isPresent()) {
             refresh();
             return;
         }
 
-        unbind();
-        this.state = state;
-        this.nodeId = nodeId;
-
-        if (this.state != null) {
-            this.state.addTelemetryListener(telemetryListener);
-        }
+        currentBinding().ifPresent(bound -> bound.state().removeTelemetryListener(telemetryListener));
+        bindingState = nextBinding;
+        nextBinding.state().addTelemetryListener(telemetryListener);
         refresh();
     }
 
@@ -213,13 +158,10 @@ public class TelemetryChartPanel extends VBox {
      * Отвязать от текущего DeviceState и очистить график.
      */
     public void unbind() {
-        if (this.state != null) {
-            this.state.removeTelemetryListener(telemetryListener);
-        }
-        this.state = null;
-        this.nodeId = null;
-        this.filteredEntries = Collections.emptyList();
-        updateChart(Collections.emptyList(), Collections.emptyList());
+        currentBinding().ifPresent(bound -> bound.state().removeTelemetryListener(telemetryListener));
+        bindingState = Unbound.INSTANCE;
+        filteredEntries = List.of();
+        updateChart(List.of(), List.of());
     }
 
     /**
@@ -230,40 +172,83 @@ public class TelemetryChartPanel extends VBox {
         return filteredEntries;
     }
 
-    // ==================== Обновление данных ====================
+    private List<Node> createContent() {
+        return basicOnly
+                ? List.of(basicChartWrap())
+                : List.of(
+                createChartRow(chart, rxChart),
+                createChartRow(rateChart, txChart),
+                createChartRow(qualityChart, hopsChart)
+        );
+    }
+
+    private StackPane basicChartWrap() {
+        StackPane chartWrap = wrapWithOverlay(chart);
+        VBox.setVgrow(chartWrap, Priority.ALWAYS);
+        return chartWrap;
+    }
 
     private void refresh() {
-        if (state == null || nodeId == null) {
-            filteredEntries = Collections.emptyList();
-            updateChart(filteredEntries, Collections.emptyList());
-            return;
+        switch (bindingState) {
+            case Bound bound -> refresh(bound);
+            case Unbound ignored -> {
+                filteredEntries = List.of();
+                updateChart(List.of(), List.of());
+            }
         }
+    }
 
-        // Вся фильтрация (нода, период, нулевые артефакты, будущие даты) — в SQL
+    private void refresh(Bound bound) {
         long now = System.currentTimeMillis() / 1000;
         long sinceEpoch = selectedPeriodSeconds > 0 ? now - selectedPeriodSeconds : 0;
-        long maxTs = now + 300; // допуск 5 мин на рассинхронизацию часов
-
-        String ownerNodeId = state.getMyNodeNum() != 0
-                ? String.format("!%08x", state.getMyNodeNum()) : "";
+        long maxTs = now + 300;
+        String ownerNodeId = ownerNodeId(bound.state());
 
         filteredEntries = NodeCacheService.getInstance()
-                .loadTelemetryForNode(nodeId, sinceEpoch, maxTs, ownerNodeId);
+                .loadTelemetryForNode(bound.nodeId(), sinceEpoch, maxTs, ownerNodeId);
 
         List<TelemetryEntry> qualityEntries = basicOnly
-                ? Collections.emptyList()
+                ? List.of()
                 : NodeCacheService.getInstance().loadTelemetryQuality(sinceEpoch, maxTs, ownerNodeId);
 
         updateChart(filteredEntries, qualityEntries);
-
-        if (onDataRefreshed != null) {
-            onDataRefreshed.run();
-        }
+        onDataRefreshed.run();
     }
 
-    // ==================== График ====================
+    private String ownerNodeId(DeviceState state) {
+        return state.getMyNodeNum() == 0 ? "" : String.format("!%08x", state.getMyNodeNum());
+    }
 
-    private AreaChart<Number, Number> createChart() {
+    private Optional<Bound> currentBinding() {
+        return switch (bindingState) {
+            case Bound bound -> Optional.of(bound);
+            case Unbound ignored -> Optional.empty();
+        };
+    }
+
+    private AreaChart<Number, Number> createSizedChart(boolean autoRangeY) {
+        AreaChart<Number, Number> areaChart = createChart(autoRangeY);
+        areaChart.setPrefHeight(200);
+        areaChart.setMinHeight(120);
+        return areaChart;
+    }
+
+    private AreaChart<Number, Number> createStyledChart(boolean autoRangeY, String stylesheetResource) {
+        AreaChart<Number, Number> areaChart = createSizedChart(autoRangeY);
+        areaChart.getStylesheets().add(getClass().getResource(stylesheetResource).toExternalForm());
+        return areaChart;
+    }
+
+    private AreaChart<Number, Number> createChart(boolean autoRangeY) {
+        AreaChart<Number, Number> areaChart = new AreaChart<>(createTimeAxis(), createYAxis(autoRangeY));
+        areaChart.setAnimated(false);
+        areaChart.setCreateSymbols(false);
+        areaChart.setLegendVisible(true);
+        areaChart.setTitle(null);
+        return areaChart;
+    }
+
+    private NumberAxis createTimeAxis() {
         NumberAxis xAxis = new NumberAxis();
         xAxis.setLabel("");
         xAxis.setForceZeroInRange(false);
@@ -272,460 +257,98 @@ public class TelemetryChartPanel extends VBox {
             @Override
             public String toString(Number object) {
                 long epoch = object.longValue();
-                if (epoch <= 0) { return ""; }
-                return Instant.ofEpochSecond(epoch)
+                return epoch <= 0
+                        ? ""
+                        : Instant.ofEpochSecond(epoch)
                         .atZone(ZoneId.systemDefault())
                         .format(AXIS_FMT);
             }
         });
+        return xAxis;
+    }
 
-        NumberAxis yAxis = new NumberAxis(0, 100, 25);
+    private NumberAxis createYAxis(boolean autoRangeY) {
+        NumberAxis yAxis = autoRangeY ? new NumberAxis() : new NumberAxis(0, 100, 25);
         yAxis.setLabel("");
-        yAxis.setAutoRanging(false);
-
-        AreaChart<Number, Number> areaChart = new AreaChart<>(xAxis, yAxis);
-        areaChart.setAnimated(false);
-        areaChart.setCreateSymbols(false);
-        areaChart.setLegendVisible(true);
-        areaChart.setTitle(null);
-        return areaChart;
+        yAxis.setAutoRanging(autoRangeY);
+        yAxis.setForceZeroInRange(autoRangeY);
+        return yAxis;
     }
 
-    private AreaChart<Number, Number> createAutoRangeChart() {
-        NumberAxis xAxis = new NumberAxis();
-        xAxis.setLabel("");
-        xAxis.setForceZeroInRange(false);
-        xAxis.setAutoRanging(true);
-        xAxis.setTickLabelFormatter(new NumberAxis.DefaultFormatter(xAxis) {
-            @Override
-            public String toString(Number object) {
-                long epoch = object.longValue();
-                if (epoch <= 0) { return ""; }
-                return Instant.ofEpochSecond(epoch)
-                        .atZone(ZoneId.systemDefault())
-                        .format(AXIS_FMT);
-            }
-        });
+    private HBox createChartRow(AreaChart<Number, Number> leftChart, AreaChart<Number, Number> rightChart) {
+        StackPane leftWrap = wrapWithOverlay(leftChart);
+        StackPane rightWrap = wrapWithOverlay(rightChart);
+        HBox.setHgrow(leftWrap, Priority.ALWAYS);
+        HBox.setHgrow(rightWrap, Priority.ALWAYS);
 
-        NumberAxis yAxis = new NumberAxis();
-        yAxis.setLabel("");
-        yAxis.setAutoRanging(true);
-        yAxis.setForceZeroInRange(true);
-
-        AreaChart<Number, Number> areaChart = new AreaChart<>(xAxis, yAxis);
-        areaChart.setAnimated(false);
-        areaChart.setCreateSymbols(false);
-        areaChart.setLegendVisible(true);
-        areaChart.setTitle(null);
-        return areaChart;
-    }
-
-    /**
-     * Конвертирует напряжение (В) в процент шкалы 0–100 для отображения на общем графике.
-     * LiPo: 3.0V = 0%, 4.2V = 100%.
-     */
-    private static double voltageToPercent(float voltage) {
-        double pct = (voltage - VOLTAGE_MIN) / (VOLTAGE_MAX - VOLTAGE_MIN) * 100.0;
-        return Math.max(0, Math.min(100, pct));
-    }
-
-    private static XYChart.Series<Number, Number> createSeries(String name) {
-        XYChart.Series<Number, Number> series = new XYChart.Series<>();
-        series.setName(name);
-        return series;
-    }
-
-    /**
-     * На графике напряжение рисуется по общей шкале 0-100, но для tooltip/crosshair
-     * сохраняем реальное значение вольт в extraValue.
-     */
-    private static XYChart.Data<Number, Number> createVoltageData(long ts, double voltage) {
-        return new XYChart.Data<>(ts, voltageToPercent((float) voltage), voltage);
+        HBox row = new HBox(6, leftWrap, rightWrap);
+        VBox.setVgrow(row, Priority.ALWAYS);
+        return row;
     }
 
     static String formatSeriesValue(String seriesName, XYChart.Data<Number, Number> point) {
-        if (SERIES_VOLTAGE.equals(seriesName) && point.getExtraValue() instanceof Number voltage) {
+        if (TelemetryChartDataBuilder.SERIES_VOLTAGE.equals(seriesName)
+                && point.getExtraValue() instanceof Number voltage) {
             return String.format("%.2fV", voltage.doubleValue());
         }
         return String.format("%.1f", point.getYValue().doubleValue());
     }
 
-    @SafeVarargs
-    private static void setChartSeries(AreaChart<Number, Number> areaChart, String title,
-                                       XYChart.Series<Number, Number>... series) {
-        areaChart.setTitle(title);
-        areaChart.getData().setAll(series);
+    private void updateChart(List<TelemetryEntry> entries, List<TelemetryEntry> qualityEntries) {
+        TelemetryChartDataBuilder.PreparedCharts prepared = TelemetryChartDataBuilder.build(
+                basicOnly,
+                entries,
+                qualityEntries,
+                selectedPeriodSeconds
+        );
+
+        chartBindings.forEach(binding ->
+                applyChart(binding.chart(), prepared.payload(binding.kind()), prepared.axisRange()));
     }
 
-    private void setXAxisRange(NumberAxis axis, AxisRange range) {
+    private void applyChart(AreaChart<Number, Number> areaChart,
+                            TelemetryChartDataBuilder.ChartPayload payload,
+                            TelemetryChartDataBuilder.AxisRange axisRange) {
+        setXAxisRange((NumberAxis) areaChart.getXAxis(), axisRange);
+        areaChart.setTitle(payload.title());
+        areaChart.getData().setAll(payload.series());
+    }
+
+    private void setXAxisRange(NumberAxis axis, TelemetryChartDataBuilder.AxisRange range) {
         axis.setAutoRanging(false);
         axis.setLowerBound(range.lowerBound());
         axis.setUpperBound(range.upperBound());
         axis.setTickUnit(range.tickUnit());
     }
 
-    private AxisRange createPlaceholderAxisRange() {
-        long now = System.currentTimeMillis() / 1000;
-        long visibleRange = selectedPeriodSeconds > 0 ? selectedPeriodSeconds : EMPTY_PERIOD_FALLBACK;
-        long padding = Math.max(visibleRange / 20, 60);
-        long totalRange = visibleRange + 2 * padding;
-        return new AxisRange(now - visibleRange - padding, now + padding, Math.max(totalRange / 8, 60));
-    }
-
-    private AxisRange buildAxisRange(List<TelemetryEntry> entries, List<TelemetryEntry> qualityEntries) {
-        long minTs = Long.MAX_VALUE;
-        long maxTs = Long.MIN_VALUE;
-
-        if (!entries.isEmpty()) {
-            minTs = Math.min(minTs, entries.getFirst().getTimestamp());
-            maxTs = Math.max(maxTs, entries.getLast().getTimestamp());
-        }
-        if (!qualityEntries.isEmpty()) {
-            minTs = Math.min(minTs, qualityEntries.getFirst().getTimestamp());
-            maxTs = Math.max(maxTs, qualityEntries.getLast().getTimestamp());
-        }
-
-        if (minTs == Long.MAX_VALUE || maxTs == Long.MIN_VALUE) {
-            return createPlaceholderAxisRange();
-        }
-
-        long range = Math.max(maxTs - minTs, 1);
-        long padding = Math.max(range / 20, 60);
-        long totalRange = range + 2 * padding;
-        return new AxisRange(minTs - padding, maxTs + padding, Math.max(totalRange / 8, 60));
-    }
-
-    private void updateChart(List<TelemetryEntry> entries, List<TelemetryEntry> qualityEntries) {
-        chart.getData().clear();
-        NumberAxis xAxis = (NumberAxis) chart.getXAxis();
-
-        NumberAxis rxXAxis = null, rateXAxis = null, txXAxis = null, qualityXAxis = null, hopsXAxis = null;
-        if (!basicOnly) {
-            rxChart.getData().clear();
-            rateChart.getData().clear();
-            txChart.getData().clear();
-            qualityChart.getData().clear();
-            hopsChart.getData().clear();
-            rxXAxis = (NumberAxis) rxChart.getXAxis();
-            rateXAxis = (NumberAxis) rateChart.getXAxis();
-            txXAxis = (NumberAxis) txChart.getXAxis();
-            qualityXAxis = (NumberAxis) qualityChart.getXAxis();
-            hopsXAxis = (NumberAxis) hopsChart.getXAxis();
-        }
-
-        XYChart.Series<Number, Number> batterySeries = createSeries(SERIES_BATTERY);
-        XYChart.Series<Number, Number> voltageSeries = createSeries(SERIES_VOLTAGE);
-        XYChart.Series<Number, Number> chUtilSeries = createSeries(SERIES_CH_UTIL);
-        XYChart.Series<Number, Number> airUtilSeries = createSeries(SERIES_AIR_UTIL);
-        XYChart.Series<Number, Number> goodRxSeries = null, badRxSeries = null, dupeRxSeries = null;
-        XYChart.Series<Number, Number> pktRxSeries = null, pktBadSeries = null, pktDupeSeries = null;
-        XYChart.Series<Number, Number> txSeries = null, txDroppedSeries = null, txRelaySeries = null, txRelayCanceledSeries = null;
-        XYChart.Series<Number, Number> snrSeries = null, rssiSeries = null;
-        XYChart.Series<Number, Number> avgHopsSeries = null, maxHopsSeries = null, minHopsSeries = null;
-
-        if (!basicOnly) {
-            goodRxSeries = createSeries("Good RX %");
-            badRxSeries = createSeries("Bad RX %");
-            dupeRxSeries = createSeries("Dupe RX %");
-
-            pktRxSeries = createSeries("Packets Received");
-            pktBadSeries = createSeries("Bad Packets");
-            pktDupeSeries = createSeries("Duplicates");
-
-            txSeries = createSeries("Packets Transmitted");
-            txDroppedSeries = createSeries("Dropped");
-            txRelaySeries = createSeries("Relayed");
-            txRelayCanceledSeries = createSeries("Relay Canceled");
-
-            snrSeries = createSeries("SNR (dB)");
-            rssiSeries = createSeries("RSSI (dBm)");
-
-            avgHopsSeries = createSeries("Среднее");
-            maxHopsSeries = createSeries("Макс");
-            minHopsSeries = createSeries("Мин");
-        }
-
-        // Предыдущие значения кумулятивных счётчиков для вычисления дельты
-        int prevPktRx = -1, prevBadRx = -1, prevDupeRx = -1;
-        int prevTx = -1, prevTxDropped = -1, prevTxRelay = -1, prevTxCanceled = -1;
-        long minTs = entries.isEmpty() ? 0 : entries.getFirst().getTimestamp();
-        long maxTs = entries.isEmpty() ? 0 : entries.getLast().getTimestamp();
-
-        if (entries.size() <= MAX_CHART_POINTS) {
-            for (TelemetryEntry e : entries) {
-                long ts = e.getTimestamp();
-                if (e.getBatteryLevel() > 0 && e.getBatteryLevel() <= 100) {
-                    batterySeries.getData().add(new XYChart.Data<>(ts, e.getBatteryLevel()));
-                }
-                if (e.getVoltage() > 0) {
-                    voltageSeries.getData().add(createVoltageData(ts, e.getVoltage()));
-                }
-                chUtilSeries.getData().add(new XYChart.Data<>(ts, e.getChannelUtilization()));
-                airUtilSeries.getData().add(new XYChart.Data<>(ts, e.getAirUtilTx()));
-                if (!basicOnly && e.getNumPacketsRx() > 0) {
-                    // Дельта (пакетов за интервал), а не кумулятивный счётчик
-                    if (prevPktRx >= 0) {
-                        int dRx = e.getNumPacketsRx() - prevPktRx;
-                        int dBad = e.getNumPacketsRxBad() - prevBadRx;
-                        int dDupe = e.getNumRxDupe() - prevDupeRx;
-                        if (dRx < 0) { dRx = e.getNumPacketsRx(); dBad = e.getNumPacketsRxBad(); dDupe = e.getNumRxDupe(); }
-                        pktRxSeries.getData().add(new XYChart.Data<>(ts, dRx));
-                        pktBadSeries.getData().add(new XYChart.Data<>(ts, dBad));
-                        pktDupeSeries.getData().add(new XYChart.Data<>(ts, dDupe));
-                        // Проценты из дельт (реальное качество за интервал)
-                        if (dRx > 0) {
-                            goodRxSeries.getData().add(new XYChart.Data<>(ts, (dRx - dBad - dDupe) / (double) dRx * 100.0));
-                            badRxSeries.getData().add(new XYChart.Data<>(ts, dBad / (double) dRx * 100.0));
-                            dupeRxSeries.getData().add(new XYChart.Data<>(ts, dDupe / (double) dRx * 100.0));
-                        }
-                    }
-                    prevPktRx = e.getNumPacketsRx();
-                    prevBadRx = e.getNumPacketsRxBad();
-                    prevDupeRx = e.getNumRxDupe();
-                }
-                if (!basicOnly && e.getNumPacketsTx() > 0) {
-                    if (prevTx >= 0) {
-                        int dTx = e.getNumPacketsTx() - prevTx;
-                        int dDr = e.getNumTxDropped() - prevTxDropped;
-                        int dRl = e.getNumTxRelay() - prevTxRelay;
-                        int dCn = e.getNumTxRelayCanceled() - prevTxCanceled;
-                        if (dTx < 0) { dTx = e.getNumPacketsTx(); dDr = e.getNumTxDropped(); dRl = e.getNumTxRelay(); dCn = e.getNumTxRelayCanceled(); }
-                        txSeries.getData().add(new XYChart.Data<>(ts, dTx));
-                        txDroppedSeries.getData().add(new XYChart.Data<>(ts, dDr));
-                        txRelaySeries.getData().add(new XYChart.Data<>(ts, dRl));
-                        txRelayCanceledSeries.getData().add(new XYChart.Data<>(ts, dCn));
-                    }
-                    prevTx = e.getNumPacketsTx();
-                    prevTxDropped = e.getNumTxDropped();
-                    prevTxRelay = e.getNumTxRelay();
-                    prevTxCanceled = e.getNumTxRelayCanceled();
-                }
-            }
-        } else {
-            long dataRange = maxTs - minTs;
-            int bucketCount = MAX_CHART_POINTS;
-            long bucketSize = Math.max(dataRange / bucketCount, 1);
-
-            int idx = 0;
-            for (int b = 0; b < bucketCount && idx < entries.size(); b++) {
-                long bucketStart = minTs + (long) b * bucketSize;
-                long bucketEnd = bucketStart + bucketSize;
-
-                double sumBattery = 0, sumVoltage = 0, sumChUtil = 0, sumAirUtil = 0;
-                double sumDeltaRx = 0, sumDeltaBadRx = 0, sumDeltaDupeRx = 0;
-                double sumDeltaTx = 0, sumDeltaTxDr = 0, sumDeltaTxRl = 0, sumDeltaTxCn = 0;
-                int countBattery = 0, countVoltage = 0, count = 0;
-                int countDeltaRx = 0, countDeltaTx = 0;
-
-                while (idx < entries.size() && entries.get(idx).getTimestamp() < bucketEnd) {
-                    TelemetryEntry e = entries.get(idx);
-                    if (e.getBatteryLevel() > 0 && e.getBatteryLevel() <= 100) {
-                        sumBattery += e.getBatteryLevel();
-                        countBattery++;
-                    }
-                    if (e.getVoltage() > 0) {
-                        sumVoltage += e.getVoltage();
-                        countVoltage++;
-                    }
-                    sumChUtil += e.getChannelUtilization();
-                    sumAirUtil += e.getAirUtilTx();
-                    if (!basicOnly && e.getNumPacketsRx() > 0) {
-                        if (prevPktRx >= 0) {
-                            int dRx = e.getNumPacketsRx() - prevPktRx;
-                            int dBad = e.getNumPacketsRxBad() - prevBadRx;
-                            int dDupe = e.getNumRxDupe() - prevDupeRx;
-                            if (dRx < 0) { dRx = e.getNumPacketsRx(); dBad = e.getNumPacketsRxBad(); dDupe = e.getNumRxDupe(); }
-                            sumDeltaRx += dRx;
-                            sumDeltaBadRx += dBad;
-                            sumDeltaDupeRx += dDupe;
-                            countDeltaRx++;
-                        }
-                        prevPktRx = e.getNumPacketsRx();
-                        prevBadRx = e.getNumPacketsRxBad();
-                        prevDupeRx = e.getNumRxDupe();
-                    }
-                    if (!basicOnly && e.getNumPacketsTx() > 0) {
-                        if (prevTx >= 0) {
-                            int dTx = e.getNumPacketsTx() - prevTx;
-                            int dDr = e.getNumTxDropped() - prevTxDropped;
-                            int dRl = e.getNumTxRelay() - prevTxRelay;
-                            int dCn = e.getNumTxRelayCanceled() - prevTxCanceled;
-                            if (dTx < 0) { dTx = e.getNumPacketsTx(); dDr = e.getNumTxDropped(); dRl = e.getNumTxRelay(); dCn = e.getNumTxRelayCanceled(); }
-                            sumDeltaTx += dTx;
-                            sumDeltaTxDr += dDr;
-                            sumDeltaTxRl += dRl;
-                            sumDeltaTxCn += dCn;
-                            countDeltaTx++;
-                        }
-                        prevTx = e.getNumPacketsTx();
-                        prevTxDropped = e.getNumTxDropped();
-                        prevTxRelay = e.getNumTxRelay();
-                        prevTxCanceled = e.getNumTxRelayCanceled();
-                    }
-                    count++;
-                    idx++;
-                }
-
-                if (count > 0) {
-                    long bucketCenter = bucketStart + bucketSize / 2;
-                    if (countBattery > 0) {
-                        batterySeries.getData().add(new XYChart.Data<>(bucketCenter, sumBattery / countBattery));
-                    }
-                    if (countVoltage > 0) {
-                        voltageSeries.getData().add(createVoltageData(bucketCenter, sumVoltage / countVoltage));
-                    }
-                    chUtilSeries.getData().add(new XYChart.Data<>(bucketCenter, sumChUtil / count));
-                    airUtilSeries.getData().add(new XYChart.Data<>(bucketCenter, sumAirUtil / count));
-                    if (countDeltaRx > 0 && sumDeltaRx > 0) {
-                        goodRxSeries.getData().add(new XYChart.Data<>(bucketCenter, (sumDeltaRx - sumDeltaBadRx - sumDeltaDupeRx) / sumDeltaRx * 100.0));
-                        badRxSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaBadRx / sumDeltaRx * 100.0));
-                        dupeRxSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaDupeRx / sumDeltaRx * 100.0));
-                    }
-                    if (countDeltaRx > 0) {
-                        pktRxSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaRx));
-                        pktBadSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaBadRx));
-                        pktDupeSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaDupeRx));
-                    }
-                    if (countDeltaTx > 0) {
-                        txSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaTx));
-                        txDroppedSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaTxDr));
-                        txRelaySeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaTxRl));
-                        txRelayCanceledSeries.getData().add(new XYChart.Data<>(bucketCenter, sumDeltaTxCn));
-                    }
-                }
-            }
-        }
-
-        // Заполняем серии quality/hops из данных по всем нодам
-        if (!basicOnly && !qualityEntries.isEmpty()) {
-            long qMinTs = qualityEntries.getFirst().getTimestamp();
-            long qMaxTs = qualityEntries.getLast().getTimestamp();
-            long qRange = qMaxTs - qMinTs;
-
-            // SNR/RSSI — per-point если мало данных
-            if (qualityEntries.size() <= MAX_CHART_POINTS) {
-                for (TelemetryEntry e : qualityEntries) {
-                    long ts = e.getTimestamp();
-                    if (e.getRxSnr() != 0 || e.getRxRssi() != 0) {
-                        snrSeries.getData().add(new XYChart.Data<>(ts, e.getRxSnr()));
-                        rssiSeries.getData().add(new XYChart.Data<>(ts, e.getRxRssi()));
-                    }
-                }
-            } else {
-                long qBucketSize = Math.max(qRange / MAX_CHART_POINTS, 1);
-                int qi = 0;
-                for (int b = 0; b < MAX_CHART_POINTS && qi < qualityEntries.size(); b++) {
-                    long bStart = qMinTs + (long) b * qBucketSize;
-                    long bEnd = bStart + qBucketSize;
-                    double sumSnr = 0, sumRssi = 0;
-                    int cntQ = 0;
-                    while (qi < qualityEntries.size() && qualityEntries.get(qi).getTimestamp() < bEnd) {
-                        TelemetryEntry e = qualityEntries.get(qi);
-                        if (e.getRxSnr() != 0 || e.getRxRssi() != 0) {
-                            sumSnr += e.getRxSnr();
-                            sumRssi += e.getRxRssi();
-                            cntQ++;
-                        }
-                        qi++;
-                    }
-                    if (cntQ > 0) {
-                        long bCenter = bStart + qBucketSize / 2;
-                        snrSeries.getData().add(new XYChart.Data<>(bCenter, sumSnr / cntQ));
-                        rssiSeries.getData().add(new XYChart.Data<>(bCenter, sumRssi / cntQ));
-                    }
-                }
-            }
-
-            // Hops — ВСЕГДА бакетируем, чтобы avg/max/min отличались
-            // (каждая запись — одна нода с одним hop count; агрегация даёт разные значения)
-            int hopBuckets = Math.min(30, Math.max(1, (int)(qRange / 900))); // ~15мин на бакет
-            if (hopBuckets < 3) hopBuckets = Math.min(3, qualityEntries.size());
-            long hopBucketSize = Math.max(qRange / hopBuckets, 1);
-
-            int hi = 0;
-            for (int b = 0; b < hopBuckets && hi < qualityEntries.size(); b++) {
-                long bStart = qMinTs + (long) b * hopBucketSize;
-                long bEnd = bStart + hopBucketSize;
-                double sumHops = 0;
-                int cntH = 0;
-                int bMaxHops = Integer.MIN_VALUE, bMinHops = Integer.MAX_VALUE;
-
-                while (hi < qualityEntries.size() && qualityEntries.get(hi).getTimestamp() < bEnd) {
-                    TelemetryEntry e = qualityEntries.get(hi);
-                    if (e.getHopStart() > 0) {
-                        int hops = e.getHopsTraveled();
-                        sumHops += hops;
-                        bMaxHops = Math.max(bMaxHops, hops);
-                        bMinHops = Math.min(bMinHops, hops);
-                        cntH++;
-                    }
-                    hi++;
-                }
-
-                if (cntH > 0) {
-                    long bCenter = bStart + hopBucketSize / 2;
-                    avgHopsSeries.getData().add(new XYChart.Data<>(bCenter, sumHops / cntH));
-                    maxHopsSeries.getData().add(new XYChart.Data<>(bCenter, bMaxHops));
-                    minHopsSeries.getData().add(new XYChart.Data<>(bCenter, bMinHops));
-                }
-            }
-        }
-
-        AxisRange axisRange = buildAxisRange(entries, qualityEntries);
-
-        setXAxisRange(xAxis, axisRange);
-        setChartSeries(chart, TITLE_BASIC, batterySeries, voltageSeries, chUtilSeries, airUtilSeries);
-
-        if (!basicOnly) {
-            setXAxisRange(rxXAxis, axisRange);
-            setXAxisRange(rateXAxis, axisRange);
-            setXAxisRange(txXAxis, axisRange);
-            setXAxisRange(qualityXAxis, axisRange);
-            setXAxisRange(hopsXAxis, axisRange);
-
-            setChartSeries(rxChart, TITLE_RX, goodRxSeries, badRxSeries, dupeRxSeries);
-            setChartSeries(rateChart, TITLE_RATE, pktRxSeries, pktBadSeries, pktDupeSeries);
-            setChartSeries(txChart, TITLE_TX, txSeries, txDroppedSeries, txRelaySeries, txRelayCanceledSeries);
-            setChartSeries(qualityChart, TITLE_QUALITY, snrSeries, rssiSeries);
-            setChartSeries(hopsChart, TITLE_HOPS, maxHopsSeries, minHopsSeries, avgHopsSeries);
-        }
-    }
-
-    // ==================== Панель фильтра периода ====================
-
     private HBox createPeriodBar() {
-        periodGroup = new ToggleGroup();
+        List<ToggleButton> buttons = PERIOD_OPTIONS.stream()
+                .map(this::periodButton)
+                .toList();
+        buttons.stream()
+                .filter(button -> Objects.equals(button.getUserData(), PERIOD_6H))
+                .findFirst()
+                .ifPresent(button -> button.setSelected(true));
 
-        ToggleButton btn1h  = periodButton("1ч",  PERIOD_1H);
-        ToggleButton btn6h  = periodButton("6ч",  PERIOD_6H);
-        ToggleButton btn12h = periodButton("12ч", PERIOD_12H);
-        ToggleButton btn24h = periodButton("24ч", PERIOD_24H);
-        ToggleButton btn48h = periodButton("48ч", PERIOD_48H);
-        ToggleButton btn1w  = periodButton("1нед", PERIOD_1W);
-        ToggleButton btnMax = periodButton("Всё",  PERIOD_MAX);
-
-        btn6h.setSelected(true);
-
-        HBox bar = new HBox(0, btn1h, btn6h, btn12h, btn24h, btn48h, btn1w, btnMax);
+        HBox bar = new HBox(0);
+        bar.getChildren().setAll(buttons);
         bar.setAlignment(Pos.CENTER_LEFT);
         bar.setStyle("-fx-border-color: -color-border-default; -fx-border-radius: 6; -fx-background-radius: 6;");
         return bar;
     }
 
-    private ToggleButton periodButton(String text, long periodSeconds) {
-        ToggleButton btn = new ToggleButton(text);
-        btn.setToggleGroup(periodGroup);
-        btn.setUserData(periodSeconds);
-        btn.setPadding(new Insets(6, 16, 6, 16));
-        btn.setStyle("-fx-background-radius: 0; -fx-font-size: 12px;");
-        btn.setOnAction(e -> {
-            selectedPeriodSeconds = periodSeconds;
+    private ToggleButton periodButton(PeriodOption option) {
+        ToggleButton button = new ToggleButton(option.label());
+        button.setToggleGroup(periodGroup);
+        button.setUserData(option.seconds());
+        button.setPadding(new Insets(6, 16, 6, 16));
+        button.setStyle("-fx-background-radius: 0; -fx-font-size: 12px;");
+        button.setOnAction(event -> {
+            selectedPeriodSeconds = option.seconds();
             refresh();
         });
-        return btn;
+        return button;
     }
-
-    // ==================== Интерактивный курсор ====================
 
     /**
      * Оборачивает AreaChart в StackPane и накладывает вертикальный курсор + label.
@@ -757,38 +380,57 @@ public class TelemetryChartPanel extends VBox {
      * Используем Platform.runLater чтобы chart.lookup() работал после добавления в Scene Graph.
      */
     private void installCrosshair(AreaChart<Number, Number> areaChart,
-                                  Line crosshair, Label valueLabel, StackPane wrapper) {
-        areaChart.sceneProperty().addListener((obs, oldScene, newScene) -> {
-            if (newScene == null) return;
-            Platform.runLater(() -> {
-                Node plotBg = areaChart.lookup(".chart-plot-background");
-                if (!(plotBg instanceof Region plotArea)) return;
+                                  Line crosshair,
+                                  Label valueLabel,
+                                  StackPane wrapper) {
+        areaChart.sceneProperty().addListener((obs, oldScene, newScene) ->
+                Optional.ofNullable(newScene).ifPresent(scene -> Platform.runLater(() ->
+                        resolveInteractiveNodes(areaChart)
+                                .ifPresent(nodes -> installCrosshairHandlers(areaChart, crosshair, valueLabel, wrapper, nodes)))));
+    }
 
-                Node chartContent = areaChart.lookup(".chart-content");
-                if (chartContent == null) return;
+    private Optional<InteractiveNodes> resolveInteractiveNodes(AreaChart<Number, Number> areaChart) {
+        return plotArea(areaChart)
+                .flatMap(plotArea -> chartContent(areaChart).map(chartContent -> new InteractiveNodes(plotArea, chartContent)));
+    }
 
-                // Event filter перехватывает клики ДО дочерних элементов (area fill, line),
-                // поэтому работает и на заполненной области графика
-                chartContent.addEventFilter(MouseEvent.MOUSE_CLICKED, event -> {
-                    Point2D local = plotArea.sceneToLocal(event.getSceneX(), event.getSceneY());
-                    if (plotArea.contains(local)) {
-                        showCrosshair(local.getX(), areaChart, crosshair, valueLabel, wrapper, plotArea);
-                    }
-                });
+    private Optional<Region> plotArea(AreaChart<Number, Number> areaChart) {
+        return Optional.ofNullable(areaChart.lookup(".chart-plot-background"))
+                .filter(Region.class::isInstance)
+                .map(Region.class::cast);
+    }
 
-                chartContent.addEventFilter(MouseEvent.MOUSE_MOVED, event -> {
-                    Point2D local = plotArea.sceneToLocal(event.getSceneX(), event.getSceneY());
-                    if (!plotArea.contains(local)) {
-                        crosshair.setVisible(false);
-                        valueLabel.setVisible(false);
-                    }
-                });
-            });
+    private Optional<Node> chartContent(AreaChart<Number, Number> areaChart) {
+        return Optional.ofNullable(areaChart.lookup(".chart-content"));
+    }
+
+    private void installCrosshairHandlers(AreaChart<Number, Number> areaChart,
+                                          Line crosshair,
+                                          Label valueLabel,
+                                          StackPane wrapper,
+                                          InteractiveNodes nodes) {
+        nodes.chartContent().addEventFilter(MouseEvent.MOUSE_CLICKED, event -> {
+            Point2D local = nodes.plotArea().sceneToLocal(event.getSceneX(), event.getSceneY());
+            if (nodes.plotArea().contains(local)) {
+                showCrosshair(local.getX(), areaChart, crosshair, valueLabel, wrapper, nodes.plotArea());
+            }
+        });
+
+        nodes.chartContent().addEventFilter(MouseEvent.MOUSE_MOVED, event -> {
+            Point2D local = nodes.plotArea().sceneToLocal(event.getSceneX(), event.getSceneY());
+            if (!nodes.plotArea().contains(local)) {
+                crosshair.setVisible(false);
+                valueLabel.setVisible(false);
+            }
         });
     }
 
-    private void showCrosshair(double localX, AreaChart<Number, Number> areaChart,
-                               Line crosshair, Label valueLabel, StackPane wrapper, Region plotArea) {
+    private void showCrosshair(double localX,
+                               AreaChart<Number, Number> areaChart,
+                               Line crosshair,
+                               Label valueLabel,
+                               StackPane wrapper,
+                               Region plotArea) {
         boolean hasData = areaChart.getData().stream().anyMatch(series -> !series.getData().isEmpty());
         if (!hasData) {
             crosshair.setVisible(false);
@@ -798,25 +440,18 @@ public class TelemetryChartPanel extends VBox {
 
         NumberAxis xAxis = (NumberAxis) areaChart.getXAxis();
         long epoch = xAxis.getValueForDisplay(localX).longValue();
-
-        // Форматируем время
         String timeStr = Instant.ofEpochSecond(epoch)
                 .atZone(ZoneId.systemDefault())
                 .format(AXIS_FMT);
 
-        StringBuilder sb = new StringBuilder(timeStr).append("\n");
+        String valuesText = areaChart.getData().stream()
+                .map(series -> nearestPointLabel(series, epoch))
+                .flatMap(Optional::stream)
+                .collect(Collectors.joining("\n"));
+        valueLabel.setText(Stream.of(timeStr, valuesText)
+                .filter(text -> !text.isBlank())
+                .collect(Collectors.joining("\n")));
 
-        // Значения всех серий в ближайшей точке
-        for (XYChart.Series<Number, Number> series : areaChart.getData()) {
-            XYChart.Data<Number, Number> nearest = findNearest(series, epoch);
-            if (nearest != null) {
-                sb.append(series.getName()).append(": ").append(formatSeriesValue(series.getName(), nearest)).append("\n");
-            }
-        }
-
-        valueLabel.setText(sb.toString().strip());
-
-        // Позиция курсора: конвертируем из координат plotArea в координаты wrapper
         Bounds plotBounds = plotArea.localToScene(plotArea.getBoundsInLocal());
         Bounds wrapperBounds = wrapper.sceneToLocal(plotBounds);
 
@@ -830,7 +465,6 @@ public class TelemetryChartPanel extends VBox {
         crosshair.setEndY(plotTop + plotHeight);
         crosshair.setVisible(true);
 
-        // Label позиция — справа от курсора, но если близко к правому краю — слева
         double labelX = xInWrapper + 8;
         double wrapperWidth = wrapper.getWidth();
         valueLabel.autosize();
@@ -842,20 +476,18 @@ public class TelemetryChartPanel extends VBox {
         valueLabel.setVisible(true);
     }
 
+    private static Optional<String> nearestPointLabel(XYChart.Series<Number, Number> series, long targetEpoch) {
+        return findNearest(series, targetEpoch)
+                .map(nearest -> series.getName() + ": " + formatSeriesValue(series.getName(), nearest));
+    }
+
     /**
      * Находит ближайшую по оси X точку в серии.
      */
-    private static XYChart.Data<Number, Number> findNearest(XYChart.Series<Number, Number> series, long targetEpoch) {
-        if (series.getData().isEmpty()) return null;
-        XYChart.Data<Number, Number> best = null;
-        long bestDist = Long.MAX_VALUE;
-        for (XYChart.Data<Number, Number> d : series.getData()) {
-            long dist = Math.abs(d.getXValue().longValue() - targetEpoch);
-            if (dist < bestDist) {
-                bestDist = dist;
-                best = d;
-            }
-        }
-        return best;
+    private static Optional<XYChart.Data<Number, Number>> findNearest(XYChart.Series<Number, Number> series,
+                                                                      long targetEpoch) {
+        return series.getData().stream()
+                .min(Comparator.comparingLong(data ->
+                        Math.abs(data.getXValue().longValue() - targetEpoch)));
     }
 }
